-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.17, 6.7.2
-
-
d362fc72c (dev), 98456a977 (6.8)
Using the minimal-qml example and a touchscreen, Drag And Drop functionality is not working at all, as items cannot be dropped from one list to another list.
However, it works as expected when using a mouse, Problems is only with Touch.
When using the qwindow-compositor example instead of the minimal-qml example, Drag And Drop works as expected using a mouse or a touchscreen also works with appcontroller built-in compositor
Using a mouse dragging elements between the lists works both using the minimal-qml example or the qwindow-compositor example.
For Gerrit Dashboard: QTBUG-127487 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
582694,3 | compositor: Implement drag and drop for touch events | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
582823,2 | compositor: Implement drag and drop for touch events | 6.8 | qt/qtwayland | Status: MERGED | +2 | 0 |