compositor: Implement drag and drop for touch events

Drags would be initiated by the client so you would get the
drag cursor and it would appear as if a drag event was in
progress. But because the compositor only implemented this
for mouse events, it would not be possible to actually
drop the contents anywhere.

This patch implements the same logic for touch events when
they are enabled.

[ChangeLog][QtWaylandCompositor] Fixed an issue where
drag operations could be initiated by touch events,
but it would not be possible to drop the contents.

Fixes: QTBUG-127487
Change-Id: I47c0e4d471a863f275c713d535c4c20c9ce5d0a9
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
(cherry picked from commit d362fc72c27c169943531a654fe7bdfadf8c321d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>